--- a/src/DailySoccerSolution/DailySoccerMobile/.io-config.json
+++ b/src/DailySoccerSolution/DailySoccerMobile/.io-config.json
@@ -1,1 +1,1 @@
-{"app_id":"1ce497e9","api_key":"71074fa22b88f61b19d95bbf8872a6e6b759a6bea5dfeef1"}
+{"app_id":"ddf08993","api_key":"2f556f0a5b2e0f0bf0042c654d3fcd1c308f65abe9f5dcc1","dev_push":true}
