--- a/src/DailySoccerSolution/DailySoccer.DAC/App.config
+++ b/src/DailySoccerSolution/DailySoccer.DAC/App.config
@@ -14,4 +14,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="DailySoccerModelContainer" connectionString="metadata=res://*/DAC.EF.DailySoccerModel.csdl|res://*/DAC.EF.DailySoccerModel.ssdl|res://*/DAC.EF.DailySoccerModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local)\sqlexpress;initial catalog=dailysoccerdb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
