- Implement account services
Signed-off-by: Kritsada Dechawantana <kritsada@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccerAppService/DailySoccerAppService.csproj
+++ b/src/DailySoccerSolution/DailySoccerAppService/DailySoccerAppService.csproj
@@ -230,7 +230,6 @@
     <Compile Include="Controllers\TestAPIController.cs" />
     <Compile Include="Controllers\TodoItemController.cs" />
     <Compile Include="DataObjects\TodoItem.cs" />
-    <Compile Include="Models\CreateNewGuessRespond.cs" />
     <Compile Include="Models\MobileServiceContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -294,7 +293,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>3728</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
