--- a/src/DailySoccerSolution/DailySoccer.Shared/DailySoccer.Shared.csproj
+++ b/src/DailySoccerSolution/DailySoccer.Shared/DailySoccer.Shared.csproj
@@ -52,11 +52,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shared\DAC\IAccountDataAccess.cs" />
+    <Compile Include="Shared\DAC\IMatchDataAccess.cs" />
     <Compile Include="Shared\Facades\AccountFacade.cs" />
+    <Compile Include="Shared\Facades\FacadeRepository.cs" />
+    <Compile Include="Shared\Facades\MatchFacade.cs" />
     <Compile Include="Shared\Models\AccountInformation.cs" />
     <Compile Include="Shared\Models\CreateNewGuestRespond.cs" />
     <Compile Include="Shared\Models\GetMatchesRequest.cs" />
     <Compile Include="Shared\Models\GetMatchesRespond.cs" />
+    <Compile Include="Shared\Models\GuessMatchInformation.cs" />
     <Compile Include="Shared\Models\GuessMatchRespond.cs" />
     <Compile Include="Shared\Models\MatchInformation.cs" />
     <Compile Include="Shared\Models\TeamInformation.cs" />
@@ -71,6 +76,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="Shared\AllClasses.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
