SQL CHANGED: Create Account, Match and GuessMatch in the database.
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccer.DAC/DailySoccer.DAC.csproj
+++ b/src/DailySoccerSolution/DailySoccer.DAC/DailySoccer.DAC.csproj
@@ -69,6 +69,15 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DailySoccerModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="DAC\EF\GuessMatch.cs">
+      <DependentUpon>DailySoccerModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAC\EF\Match.cs">
+      <DependentUpon>DailySoccerModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAC\EF\Team.cs">
+      <DependentUpon>DailySoccerModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
