--- a/src/DailySoccerSolution/DailySoccer.Shared/DailySoccer.Shared.csproj
+++ b/src/DailySoccerSolution/DailySoccer.Shared/DailySoccer.Shared.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shared\DAC\AccountDataAccess.cs" />
     <Compile Include="Shared\DAC\IAccountDataAccess.cs" />
     <Compile Include="Shared\DAC\IMatchDataAccess.cs" />
     <Compile Include="Shared\Facades\AccountFacade.cs" />
