--- a/src/DailySoccerSolution/DailySoccer.Specs/DailySoccer.Specs.csproj
+++ b/src/DailySoccerSolution/DailySoccer.Specs/DailySoccer.Specs.csproj
@@ -58,7 +58,6 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="CreateNewGuestSteps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Specs\CreateNewGuest.feature.cs">
       <AutoGen>True</AutoGen>
@@ -71,6 +70,7 @@
       <DependentUpon>GetMatches.feature</DependentUpon>
     </Compile>
     <Compile Include="Specs\Hooks.cs" />
+    <Compile Include="Specs\Steps\BackgroundSteps.cs" />
     <Compile Include="Specs\Steps\CreateNewGuestSteps.cs" />
     <Compile Include="Specs\Steps\MatchesServicesSteps.cs" />
   </ItemGroup>
