--- a/src/DailySoccerSolution/DailySoccer.Specs/DailySoccer.Specs.csproj
+++ b/src/DailySoccerSolution/DailySoccer.Specs/DailySoccer.Specs.csproj
@@ -72,7 +72,7 @@
     <Compile Include="Specs\Hooks.cs" />
     <Compile Include="Specs\Steps\BackgroundSteps.cs" />
     <Compile Include="Specs\Steps\CreateNewGuestSteps.cs" />
-    <Compile Include="Specs\Steps\MatchesServicesSteps.cs" />
+    <Compile Include="Specs\Steps\GetMatchesSteps.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DailySoccer.Shared\DailySoccer.Shared.csproj">
