Implement first scenario for GuessMatch complete.
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccer.Specs/DailySoccer.Specs.csproj
+++ b/src/DailySoccerSolution/DailySoccer.Specs/DailySoccer.Specs.csproj
@@ -69,11 +69,17 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>GetMatches.feature</DependentUpon>
     </Compile>
+    <Compile Include="Specs\GuessMatch.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GuessMatch.feature</DependentUpon>
+    </Compile>
     <Compile Include="Specs\Hooks.cs" />
     <Compile Include="Specs\Steps\BackgroundSteps.cs" />
     <Compile Include="Specs\Steps\CommonSetup.cs" />
     <Compile Include="Specs\Steps\CreateNewGuestSteps.cs" />
     <Compile Include="Specs\Steps\GetMatchesSteps.cs" />
+    <Compile Include="Specs\Steps\GuessMatchSteps.cs" />
     <Compile Include="Specs\Steps\StepHelper.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -92,6 +98,10 @@
     <None Include="Specs\GetMatches.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>GetMatches.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Specs\GuessMatch.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>GuessMatch.feature.cs</LastGenOutput>
     </None>
   </ItemGroup>
   <ItemGroup />
