--- a/src/DailySoccerSolution/DailySoccer.DAC/DailySoccer.DAC.csproj
+++ b/src/DailySoccerSolution/DailySoccer.DAC/DailySoccer.DAC.csproj
@@ -75,6 +75,12 @@
     <Compile Include="DAC\EF\Match.cs">
       <DependentUpon>DailySoccerModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DAC\EF\Reward.cs">
+      <DependentUpon>DailySoccerModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DAC\EF\RewardGroup.cs">
+      <DependentUpon>DailySoccerModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DAC\EF\Team.cs">
       <DependentUpon>DailySoccerModel.tt</DependentUpon>
     </Compile>
