--- a/src/DailySoccerSolution/DailySoccer.Shared/DailySoccer.Shared.csproj
+++ b/src/DailySoccerSolution/DailySoccer.Shared/DailySoccer.Shared.csproj
@@ -56,9 +56,12 @@
     <Compile Include="Shared\DAC\IAccountDataAccess.cs" />
     <Compile Include="Shared\DAC\IMatchDataAccess.cs" />
     <Compile Include="Shared\DAC\MatchDataAccess.cs" />
+    <Compile Include="Shared\DAC\IRewardDataAccess.cs" />
+    <Compile Include="Shared\DAC\RewardDataAccess.cs" />
     <Compile Include="Shared\Facades\AccountFacade.cs" />
     <Compile Include="Shared\Facades\FacadeRepository.cs" />
     <Compile Include="Shared\Facades\MatchFacade.cs" />
+    <Compile Include="Shared\Facades\RewardFacade.cs" />
     <Compile Include="Shared\Models\AccountInformation.cs" />
     <Compile Include="Shared\Models\CreateNewGuestRespond.cs" />
     <Compile Include="Shared\Models\GetAllLeagueRespond.cs" />
@@ -69,6 +72,8 @@
     <Compile Include="Shared\Models\GuessMatchRequest.cs" />
     <Compile Include="Shared\Models\GuessMatchRespond.cs" />
     <Compile Include="Shared\Models\LeagueInformation.cs" />
+    <Compile Include="Shared\Models\RewardInformation.cs" />
+    <Compile Include="Shared\Models\RewardGroupInformation.cs" />
     <Compile Include="Shared\Models\MatchInformation.cs" />
     <Compile Include="Shared\Models\RewardInformation.cs" />
     <Compile Include="Shared\Models\TeamInformation.cs" />
