--- a/src/DailySoccerSolution/DailySoccer.DAC/DailySoccer.DAC.csproj
+++ b/src/DailySoccerSolution/DailySoccer.DAC/DailySoccer.DAC.csproj
@@ -69,6 +69,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DailySoccerModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="DAC\EF\FavoriteTeam.cs">
+      <DependentUpon>DailySoccerModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DAC\EF\GuessMatch.cs">
       <DependentUpon>DailySoccerModel.tt</DependentUpon>
     </Compile>
