--- a/src/DailySoccerSolution/DailySoccerBackoffice/packages.config
+++ b/src/DailySoccerSolution/DailySoccerBackoffice/packages.config
@@ -37,5 +37,8 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="ServiceStack.Client" version="4.0.50" targetFramework="net452" />
+  <package id="ServiceStack.Interfaces" version="4.0.50" targetFramework="net452" />
+  <package id="ServiceStack.Text" version="4.0.50" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
