--- a/src/DailySoccerSolution/DailySoccerMobile/bower.json
+++ b/src/DailySoccerSolution/DailySoccerMobile/bower.json
@@ -4,5 +4,8 @@
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.1.1",
     "ionic-platform-web-client": "~0.2.1"
+  },
+  "dependencies": {
+    "angular-responsive-images": "~0.1.0"
   }
 }
