Create models for GetAllGuessHistory complete.
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccer.Shared/DailySoccer.Shared.csproj
+++ b/src/DailySoccerSolution/DailySoccer.Shared/DailySoccer.Shared.csproj
@@ -64,10 +64,13 @@
     <Compile Include="Shared\Facades\RewardFacade.cs" />
     <Compile Include="Shared\Models\AccountInformation.cs" />
     <Compile Include="Shared\Models\CreateNewGuestRespond.cs" />
+    <Compile Include="Shared\Models\GetAllGuessHistoryRequest.cs" />
+    <Compile Include="Shared\Models\GetAllGuessHistoryRespond.cs" />
     <Compile Include="Shared\Models\GetAllLeagueRespond.cs" />
     <Compile Include="Shared\Models\GetCurrentRewardsRespond.cs" />
     <Compile Include="Shared\Models\GetMatchesRequest.cs" />
     <Compile Include="Shared\Models\GetMatchesRespond.cs" />
+    <Compile Include="Shared\Models\GuessHistoryMonthlyInformation.cs" />
     <Compile Include="Shared\Models\GuessMatchInformation.cs" />
     <Compile Include="Shared\Models\GuessMatchRequest.cs" />
     <Compile Include="Shared\Models\GuessMatchRespond.cs" />
