--- a/src/DailySoccerSolution/DailySoccer.Shared/DailySoccer.Shared.csproj
+++ b/src/DailySoccerSolution/DailySoccer.Shared/DailySoccer.Shared.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Shared\Models\GetAllGuessHistoryRespond.cs" />
     <Compile Include="Shared\Models\GetAllLeagueRespond.cs" />
     <Compile Include="Shared\Models\GetCurrentRewardsRespond.cs" />
+    <Compile Include="Shared\Models\GetGuessHistoryByMonthRequest.cs" />
     <Compile Include="Shared\Models\GetGuessHistoryByMonthRespond.cs" />
     <Compile Include="Shared\Models\GetMatchesRequest.cs" />
     <Compile Include="Shared\Models\GetMatchesRespond.cs" />
