Complete first scenario for GetCurrentRewards.
Signed-off-by: Sakul Jaruthanaset <miolynet@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccer.Shared/DailySoccer.Shared.csproj
+++ b/src/DailySoccerSolution/DailySoccer.Shared/DailySoccer.Shared.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Shared\Models\RewardInformation.cs" />
     <Compile Include="Shared\Models\SetFavoriteTeamRequest.cs" />
     <Compile Include="Shared\Models\TeamInformation.cs" />
+    <Compile Include="Shared\Models\WinnerAwardInformation.cs" />
     <Compile Include="Shared\Models\WinnerInformation.cs" />
   </ItemGroup>
   <ItemGroup />
