--- a/src/DailySoccerSolution/DailySoccer.Specs/DailySoccer.Specs.csproj
+++ b/src/DailySoccerSolution/DailySoccer.Specs/DailySoccer.Specs.csproj
@@ -89,6 +89,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>GetWinners.feature</DependentUpon>
     </Compile>
+    <Compile Include="Specs\GetYourRewards.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>GetYourRewards.feature</DependentUpon>
+    </Compile>
     <Compile Include="Specs\GuessMatch.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -108,6 +113,7 @@
     <Compile Include="Specs\Steps\GetGuessHistoryByMonthSteps.cs" />
     <Compile Include="Specs\Steps\GetMatchesSteps.cs" />
     <Compile Include="Specs\Steps\GetWinnersSteps.cs" />
+    <Compile Include="Specs\Steps\GetYourRewardsSteps.cs" />
     <Compile Include="Specs\Steps\GuessMatchSteps.cs" />
     <Compile Include="Specs\Steps\SetFavoriteTeamSteps.cs" />
     <Compile Include="Specs\Steps\StepHelper.cs" />
@@ -144,6 +150,10 @@
     <None Include="Specs\GetWinners.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>GetWinners.feature.cs</LastGenOutput>
+    </None>
+    <None Include="Specs\GetYourRewards.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>GetYourRewards.feature.cs</LastGenOutput>
     </None>
     <None Include="Specs\GuessMatch.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
