Implement CreateNewRewardGroup Spec
Signed-off-by: Kritsada Dechawantana <kritsada@perfenterprise.com>

--- a/src/DailySoccerSolution/DailySoccer.DAC/DailySoccer.DAC.csproj
+++ b/src/DailySoccerSolution/DailySoccer.DAC/DailySoccer.DAC.csproj
@@ -87,6 +87,9 @@
     <Compile Include="DAC\EF\Team.cs">
       <DependentUpon>DailySoccerModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="DAC\EF\Ticket.cs">
+      <DependentUpon>DailySoccerModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DAC\EF\Winner.cs">
       <DependentUpon>DailySoccerModel.tt</DependentUpon>
     </Compile>
